--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -20,7 +20,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 WORKDIR /workspace
 
 # Copy just requirements first for caching
-COPY InfiniteTalk_Runpod_Serverless/worker/requirements.txt ./InfiniteTalk_Runpod_Serverless/worker/requirements.txt
+COPY worker/requirements.txt ./worker/requirements.txt
 
 # Install minimal Python deps for lint/CI.
 # We intentionally SKIP torch/torchvision/xformers/flash-attn because:
@@ -28,7 +28,7 @@ COPY InfiniteTalk_Runpod_Serverless/worker/requirements.txt ./InfiniteTalk_Runpo
 #  - This image is for import-time validation and static checks only.
 RUN --mount=type=cache,target=/root/.cache/pip \
     python -m pip install --no-cache-dir --upgrade pip setuptools wheel && \
-    grep -vE '^(torch|torchvision|xformers|flash-attn)\\b' InfiniteTalk_Runpod_Serverless/worker/requirements.txt > /tmp/req.txt && \
+    grep -vE '^(torch|torchvision|xformers|flash-attn)\\b' worker/requirements.txt > /tmp/req.txt && \
     pip install --no-cache-dir -r /tmp/req.txt && \
     rm -f /tmp/req.txt
 
@@ -36,7 +36,7 @@ RUN --mount=type=cache,target=/root/.cache/pip \
 COPY . /workspace
 
 # Workdir at the serverless package
-WORKDIR /workspace/InfiniteTalk_Runpod_Serverless
+WORKDIR /workspace
 
 # Not for GPU inference; used to validate imports and CLI entry boots.
 # Local run (for basic boot): docker run --rm infinitetalk-runpod:cpu python entrypoint.py
